Subscribe button correctly aligned. Menu links don't move on hover. Everything is centered on mobile resolution

--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,9 @@ ul{
 }
 
 .button-1{
-    height: 38px;
+    height: 37px;
     border: none;
-    padding: 20px;
+    padding: 10px;
     background: #cc4722;
     color: #fff;
 }
@@ -72,13 +72,11 @@ header nav{
 }
 
 header .highlight, header .current a{
-    color: #e8491d;
-    font-weight: bold;
+    color: #e8491d;  
 }
 
 header a:hover{
-    color: rgb(18, 141, 24);
-    font-weight: bold;
+    color: rgb(18, 141, 24);   
 }
 
 /* Showcase */
@@ -94,9 +92,9 @@ header a:hover{
 
 }
 
-#showcase h1{
+#showcase h2{
     margin-top: 100px;
-    font-size: 55px;
+    font-size: 32px;
     margin-bottom: 18px;
 }
 
@@ -111,7 +109,7 @@ header a:hover{
     background-color: rgb(58, 68, 78);
 }
 
-#newsletter h1{
+#newsletter h2{
     float: left;
 }
 
@@ -190,7 +188,7 @@ footer p{
     header #branding,
     header nav,
     header nav li,
-    #newsletter h1,
+    #newsletter h2,
     #newsletter form,
     #boxes .box,
     article#main-col,
@@ -198,13 +196,15 @@ footer p{
       float:none;
       text-align:center;
       width:100%;
+      padding: 0;
+      margin: 0;
     }
   
     header{
       padding-bottom:20px;
     }
-  
-    #showcase h1{
+
+    #showcase h2{
       margin-top:40px;
     }
   
